--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,4 +1,4 @@
-@import 'abstracts/variables';
+@import "abstracts/variables";
 /* Alert */
 
 .alert {
@@ -18,10 +18,10 @@
   opacity: 1;
   transition: opacity 0.6s;
   border-radius: 10px;
-  color: #FFF;
+  color: #fff;
 }
-.alert p{
-  color: #FFF;
+.alert p {
+  color: #fff;
 }
 .closebtn {
   margin-left: 15px;
@@ -33,13 +33,13 @@
   transition: 0.3s;
 
   &:hover {
-    color: #E9E9E9;
+    color: #e9e9e9;
   }
 }
 
 /* Progress Bar */
 .progress-container {
-  color: #FFF;
+  color: #fff;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -55,4 +55,13 @@
   background-color: $primary-color;
   transition: width 0.1s;
   border-radius: 0px 0px 10px 10px;
+}
+
+@media screen and (min-width: 0px) and (max-width: 600px) {
+  .alert {
+    width: 80vw;
+    top: calc(
+      50px + var(--safe-area-top-android, env(safe-area-inset-top, 0px))
+    );
+  }
 }
