--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -789,7 +789,7 @@
 @media screen and (min-width: 426px) and (max-width: 600px) {
   .flex-back-btn,
   .flex-right-btn {
-    top: 24px;
+    top: var(--safe-area-top-android, env(safe-area-inset-top, 24px));
   }
   .body-show {
     padding-bottom: 50px;
@@ -925,7 +925,11 @@
 @media screen and (max-width: 425px) {
   .flex-back-btn,
   .flex-right-btn {
-    top: 24px;
+    top: Max(
+      var(--safe-area-top-android, 0px),
+      env(safe-area-inset-top, 0px),
+      24px
+    );
     gap: 0px;
   }
   .body-show {
