--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -224,7 +224,7 @@
                       <% end %>
                     </div>
                     <% unless params[:tab] == "frise" %>
-                      <%= paginate @oeuvres, params: { tab: 'references' } %>
+                      <%= paginate @oeuvres, params: { tab: 'references' }, window: 1, outer_window: 1 %>
                     <% end %>
                   </div>
                   <div id="studios" class="content-tab" data-tabs-search-target="tabContent" style="<%= params[:tab] == 'studios' ? 'display:block;' : 'display:none;' %>">
@@ -234,7 +234,7 @@
                       <% end %>
                     </div>
                     <% unless params[:tab] == "frise" %>
-                      <%= paginate @studios, params: { tab: 'studios' } %>
+                      <%= paginate @studios, params: { tab: 'studios' }, window: 1, outer_window: 1 %>
                     <% end %>
                   </div>
                   <div id="designers" class="content-tab" data-tabs-search-target="tabContent" style="<%= params[:tab] == 'designers' ? 'display:block;' : 'display:none;' %>">
@@ -244,7 +244,7 @@
                       <% end %>
                     </div>
                     <% unless params[:tab] == "frise" %>
-                      <%= paginate @designers, params: { tab: 'designers' } %>
+                      <%= paginate @designers, params: { tab: 'designers' }, window: 1, outer_window: 1 %>
                     <% end %>
                   </div>
                   <div id="frise" class="content-tab" data-tabs-search-target="tabContent" style="<%= params[:tab] == 'frise' ? 'display:block;' : 'display:none;' %>">
@@ -276,7 +276,6 @@
                                     <% if oeuvre.oeuvre_images.first&.file&.attached? %>
                                       <div class="oeuvre" title="<%= oeuvre.nom_oeuvre %>" data-year="<%= oeuvre.date_oeuvre %>" style="background-image: url('<%= url_for(oeuvre.oeuvre_images.first.file.variant(:thumb))  %>');"></div>
                                     <% else %>
-                                      <%# Fallback : une div vide avec une couleur ou sans image %>
                                       <div class="oeuvre" title="<%= oeuvre.nom_oeuvre %>" data-year="<%= oeuvre.date_oeuvre %>" style="background-color: #D9D9D9;"></div>
                                     <% end %>
                                   <% end %>
