--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,7 +1,12 @@
-<div id="<%= dom_id notification %>">
-  <p><%= notification.user_id %></p>
-  <p><%= notification.notifiable_type %></p>
-  <p><%= notification.notifiable_id %></p>
-  <p><%= notification.message %></p>
-  <p><%= notification.status %></p>
+<div id="<%= dom_id notification %>" class="notification-item <%= notification.status %>">
+  <div class="notification-content">
+    <h4 class="notification-title"><%= notification.title %></h4>
+    <p class="notification-message"><%= notification.message %></p>
+  </div>
+  <div class="notification-meta">
+    <span class="time"><%= distance_of_time_in_words(Time.now, notification.created_at) %></span>
+    <% if notification.unread? %>
+      <div class="notification-dot"></div>
+    <% end %>
+  </div>
 </div>
