--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -9,62 +9,47 @@
   </button>
   <h1><%= t('notifications.title') %></h1>
 </section>
-
 <section class="grid-1">
   <% if @notifications.any? %>
     <% today_notifications = @notifications.select { |notification| notification.created_at.to_date == Date.today } %>
     <% last_7_days_notifications = @notifications.select { |notification| notification.created_at.to_date >= 7.days.ago.to_date && notification.created_at.to_date < Date.today } %>
     <% last_30_days_notifications = @notifications.select { |notification| notification.created_at.to_date >= 30.days.ago.to_date && notification.created_at.to_date < 7.days.ago.to_date } %>
     <% previous_notifications = @notifications.select { |notification| notification.created_at.to_date < 30.days.ago.to_date } %>
-
+    <%# --- AUJOURD'HUI --- %>
     <% if today_notifications.any? %>
       <h2><%= t('notifications.today') %></h2>
-      <ul class="notifications">
-        <% today_notifications.each do |notification| %>
-          <li>
-            <%= notification.message %>
-            <p class="time"><%= distance_of_time_in_words(Time.now, notification.created_at) %></p>
-          </li>
+      <div class="notifications"> <% today_notifications.each do |notification| %>
+          <%= render "notifications/notification", notification: notification %>
         <% end %>
-      </ul>
+      </div>
     <% end %>
-
+    <%# --- 7 JOURS --- %>
     <% if last_7_days_notifications.any? %>
       <h2><%= t('notifications.last_7_days') %></h2>
-      <ul class="notifications">
+      <div class="notifications">
         <% last_7_days_notifications.each do |notification| %>
-          <li>
-            <%= notification.message %>
-            <p class="time"><%= distance_of_time_in_words(Time.now, notification.created_at) %></p>
-          </li>
+          <%= render "notifications/notification", notification: notification %>
         <% end %>
-      </ul>
+      </div>
     <% end %>
-
+    <%# --- 30 JOURS --- %>
     <% if last_30_days_notifications.any? %>
       <h2><%= t('notifications.last_30_days') %></h2>
-      <ul class="notifications">
+      <div class="notifications">
         <% last_30_days_notifications.each do |notification| %>
-          <li>
-            <%= notification.message %>
-            <p class="time"><%= distance_of_time_in_words(Time.now, notification.created_at) %></p>
-          </li>
+          <%= render "notifications/notification", notification: notification %>
         <% end %>
-      </ul>
+      </div>
     <% end %>
-
+    <%# --- ANCIENNES --- %>
     <% if previous_notifications.any? %>
       <h2><%= t('notifications.previous') %></h2>
-      <ul class="notifications">
+      <div class="notifications">
         <% previous_notifications.each do |notification| %>
-          <li>
-            <%= notification.message %>
-            <p class="time"><%= distance_of_time_in_words(Time.now, notification.created_at) %></p>
-          </li>
+          <%= render "notifications/notification", notification: notification %>
         <% end %>
-      </ul>
+      </div>
     <% end %>
-
   <% else %>
     <p><%= t('notifications.none') %></p>
   <% end %>
