--- a/app/views/notifications/new.html.erb
+++ b/app/views/notifications/new.html.erb
@@ -36,7 +36,11 @@
               } 
             } %>
       </div>
-      <%# --- AJOUT DU CHAMP TITRE --- %>
+      <div class="form-group">
+        <%= form.label :link, "Lien de redirection (optionnel)" %>
+        <%= form.text_field :link, class: "form-control", placeholder: "Ex: https://omniscient-design.fr/oeuvres ou /profil" %>
+        <small style="color: #666;">Laissez vide pour une simple info sans clic.</small>
+      </div>
       <div class="form-group">
         <%= form.label :title, "Titre de la notification" %>
         <%= form.text_field :title, class: "form-control", required: true, placeholder: "Ex: Nouveauté, Rappel..." %>
