--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -17,7 +17,7 @@
       </div>
     <% end %>
     <div class="form-step" data-multi-step-form-target="step" style="<%= is_edit_mode ? 'display: none;' : 'display: block;' %>">
-      <h2 data-multi-step-form-target="stepTitle">Critères d’acceptation des designers</h2>
+      <h2 data-multi-step-form-target="stepTitle">Étape 1 : Critères d’acceptation des designers</h2>
       <p>
         Afin de garantir la qualité, la cohérence et le respect du travail de chacun, toute soumission sur omniscientdesign.fr doit respecter les critères suivants.
         <br>
